kustomize/base/ecfront/ecfront-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy
spec:
  selector:
    matchLabels:
      app: ecfront
  template:
    metadata:
      labels:
        app: ecfront
    spec:
      containers:
      - name: ecfront
        image: gcr.io/go-portforio/ecfront2
        ports:
          - containerPort: 80
            name: main
        readinessProbe:
          httpGet:
            path: /
            port: 80
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
        resources:
          limits:
            cpu: 500m
            memory: 500m
          requests:
            cpu: 100m
            memory: 100m
