kustomize/base/ecfront/ecfront-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  selector:
    app: metrics
    department: ecfront
  ports:
  - protocol: TCP
    name: ecfront
    port: 8080
    targetPort: 8080
  - protocol: TCP
    name: nodeexporter
    port: 9100 
    targetPort: 9100
